# uiucprescon-workflows

./: .buildinfo  .gitmodules  Jenkinsfile  LICENSE  MANIFEST.in  README.md  genindex.html  glossary.html  index.html  objects.inv  overview.html  pyproject.toml  requirements-dev.txt  requirements-freeze.txt  requirements-gui.txt  requirements-mac-dmg.txt  requirements.txt  search.html  searchindex.js  sonar-project.properties  tox.ini  use_cases.html  workflows.html
.doctrees/: environment.pickle  glossary.doctree  index.doctree  overview.doctree  use_cases.doctree  workflows.doctree
.doctrees/workflows/: converting_packages.doctree  generate.doctree  hathiprep.doctree  verifying.doctree  zippackages.doctree
.github/workflows/: documentation.yml
_sources/workflows/: zippackages.rst.txt
ci/docker/linux/jenkins/: Dockerfile  apt-packages.txt
ci/docker/linux/tox/: Dockerfile  apt-packages.txt
ci/docker/windows/tox/: Dockerfile
ci/jenkins/scripts/: ensure_application_installed_property.ps1  new-uv-global-config.ps1  test-apple-bundle.sh
contrib/: ensure_installed_property.ps1  ensure_uninstalled.ps1  make_chocolatey.ps1  make_osx_dist.sh  make_standalone.bat  make_standalone.sh  make_standalone_windows.py  speedwagon-bootstrap.py  speedwagon_bootstrap.py
docs/: conf.py  index.rst
docs/exts/: workflowssummary.py
docs/workflows/: converting_packages.rst  hathiprep.rst
packaging/: Speedwagon.spec  create_osx_app_bundle.py  hook-speedwagon_uiucprescon.py  package_speedwagon.py  speedwagon-bootstrap.py
packaging/choco_package_template/speedwagon/: speedwagon.nuspec
packaging/choco_package_template/speedwagon/tools/: chocolateyInstall.ps1  chocolateyuninstall.ps1
requirements/: requirements-dev-freeze.txt  requirements-dev.in  requirements-dev.txt  requirements-freeze.txt  requirements-vendor.txt  requirements.in  requirements.txt
script/: create_mac_standalone.sh  create_windows_standalone.ps1
speedwagon_uiucprescon/: __init__.py  active_workflows.py  conditions.py  deprecated_workflows.py  plugin.py  speedwagon_bootstrap.py  workflow_batch_to_HathiTrust_TIFF.py  workflow_batch_to_hathi_tiff.py  workflow_capture_one_to_dl_compound.py  workflow_capture_one_to_dl_compound_and_dl.py  workflow_capture_one_to_hathi.py  workflow_completeness.py  workflow_convert_capone_pres_to_digital_lib_jp2.py  workflow_convert_tiff_to_hathi_jp2.py  workflow_get_marc.py  workflow_hathi_limited_to_dl_compound.py  workflow_hathiprep.py  workflow_make_checksum.py  workflow_make_jp2.py  workflow_medusa_preingest.py  workflow_ocr.py  workflow_validate_hathi_metadata.py  workflow_validate_metadata.py  workflow_verify_checksums.py  workflow_zip_packages.py
speedwagon_uiucprescon/tasks/: __init__.py  packaging.py  prep.py  validation.py
speedwagon_uiucpreson/: __init__.py  plugin.py  workflow_batch_to_HathiTrust_TIFF.py  workflow_hathiprep.py  workflow_make_checksum.py  workflow_validate_hathi_metadata.py  workflow_validate_metadata.py
speedwagon_uiucpreson/tasks/: __init__.py  prep.py
tests/: test_active_workflows.py  test_batch_to_hathitrust.py  test_capture_one_to_dl_compound.py  test_capture_one_to_dl_compound_and_dl.py  test_completeness.py  test_convert_capture_one_preservation_to_digital_lib_jp2.py  test_create_checksums.py  test_get_marc.py  test_hathi_limited_to_dl_compound.py  test_hathiprep.py  test_make_jp2.py  test_make_workflow_make_checksum.py  test_medua_preingest_curation.py  test_ocr.py  test_tasks.py  test_validate_metadata.py  test_verify_checksums.py  test_workflow_capture_one_to_hathi.py  test_workflow_convertTifftoHathiTrustjp2.py  test_workflow_validate_hathi_metadata.py  test_workflow_zip_packages.py
vars/: runJenkinsPipeline.groovy
workflows/: converting_packages.html  generate.html  hathiprep.html  verifying.html  zippackages.html
