[build-system]
requires = ["setuptools>=57.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speedwagon-uiucprescon"
version = "0.0.1.dev0"
dependencies = [
    "speedwagon>=0.4.0a1"
]
description = "Collection of tools and workflows for DS"
maintainers = [
    { name="Henry Borchers", email="hborcher@illinois.edu" }
]
authors = [
    {name="University Library at The University of Illinois at Urbana Champaign: Preservation Services", email="prescons@library.illinois.edu"}
]

[project.entry-points.'speedwagon.plugins']
#uiucprescon_workflows = 'speedwagon_uiucprecson:uiucprescon_plugin'
uiucprescon_active_workflows = 'speedwagon_uiucprescon.active_workflows'
uiucprescon_deprecated_workflows = 'speedwagon_uiucprescon.deprecated_workflows'
#uiucprescon_plugin_deprecated = 'speedwagon_uiucprecson:uiucprescon_plugin_deprecated'
[tool.setuptools]
packages = [
    'speedwagon_uiucprescon',
    'speedwagon_uiucprescon.tasks'
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
#    Documentation checks should be done by pydocstyle instead of pylint
    "missing-docstring"
]
